Fixed bug #36016 (realpath cache memleaks)